fixed side nav z-index

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 1000;
 }
 
 nav {
